<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Read With Me</string>
    <string name="create_button_string">Make new story</string>
    <string name="read_button_string">Read old story</string>
    <string name="got_pressed_string">Got Pressed:%1d</string>
    <string name="bear_desc">White</string>
    <string name="new_book">New Book</string>
    <string name="enter_your_book_s_title">Enter your book\'s title</string>
    <string name="create_book">Create Book</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="enter_text_for_this_page">Enter text for this page</string>
    <string name="page_text">Page text</string>
    <string name="delete">Delete</string>

    <string-array name="colors">
        <item>red</item>
        <item>orange</item>
        <item>yellow</item>
        <item>green</item>
        <item>blue</item>
        <item>indigo</item>
        <item>violet</item>
        <item>aqua</item>
        <item>black</item>
        <item>fuchsia</item>
        <item>gray</item>
        <item>grey</item>
        <item>lime</item>
        <item>maroon</item>
        <item>navy</item>
        <item>olive</item>
        <item>purple</item>
        <item>silver</item>
        <item>teal</item>
        <item>white</item>
    </string-array>
</resources>
