<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="@dimen/bear_width"
        android:layout_height="@dimen/bear_width"

        android:contentDescription="@string/bear_desc"
        android:src="@drawable/mrwhite"

        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:onClick="processClick"
        android:text="@string/create_button_string"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:textColor="@color/white"

        android:layout_centerVertical="true"/>

    <Button
        android:id="@+id/readButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:text="@string/read_button_string"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:textColor="@color/white"
        android:onClick="processClick"

        android:layout_below="@id/createButton"
        android:layout_marginTop="10dp"/>

</RelativeLayout>